--- a/index.html
+++ b/index.html
@@ -5,31 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <header class="header">
         <nav class="nav">
-            <div class="nav__left">
-                <a href="#"><img src="" alt=""></a>
-            </div>
-            <div class="nav-right">
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a href="#"></a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#"></a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#"></a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#"></a>
-                    </li>
-                </ul>
+            <div class="container">
+               <div class="navbar">
+                <div class="nav__left">
+                    <a href="#"><img src="./img/header-nav-logo.png" alt=""></a>
+                </div>
+                <div class="nav__right">
+                    <ul class="nav__list">
+                        <li class="nav__item">
+                            <a href="#">О нас</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#">Услуги</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#">Продукция</a>
+                        </li>
+                        <li class="nav__item">
+                            <a href="#">Контакты</a>
+                        </li>
+                    </ul>
+                    <div class="nav__contacts">
+                        <p>+7(775)976 08 77</p>
+                        <a href="#"><img src="./img/header-nav-whatsupp.svg" alt=""></a>
+                        <a href="#"><img src="./img/header-nav-facebook.svg" alt=""></a>
+                        <a href="#"><img src="./img/header-nav-instagram.svg" alt=""></a>
+                    </div>
+                </div>
+               </div>
             </div>
         </nav>
+        <div class="header__title">
+            <h1>Полиграфия в Астане</h1>
+            <p>Печать на футболках, толстовках Все виды полиграфических работ</p>
+        </div>
     </header>
 </body>
 </html>
