--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./slick-1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="./slick-1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&family=Open+Sans:wght@400;600&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+
+<body class="body">
     <header class="header">
-        <nav class="nav">
-            <div class="container">
-               <div class="navbar">
+        <div class="container">
+            <nav class="nav">
                 <div class="nav__left">
                     <a href="#"><img src="./img/header-nav-logo.png" alt=""></a>
                 </div>
@@ -34,19 +39,107 @@
                         </li>
                     </ul>
                     <div class="nav__contacts">
-                        <p>+7(775)976 08 77</p>
+                        <a class="number" href="tel:+7(775)976 08 77">+7(775)976 08 77</a>
                         <a href="#"><img src="./img/header-nav-whatsupp.svg" alt=""></a>
-                        <a href="#"><img src="./img/header-nav-facebook.svg" alt=""></a>
-                        <a href="#"><img src="./img/header-nav-instagram.svg" alt=""></a>
+                        <a href="https://m.facebook.com/zharnamaprint/?locale=ru_RU"><img src="./img/header-nav-facebook.svg" alt=""></a>
+                        <a href="https://www.instagram.com/design_zharnama/"><img src="./img/header-nav-instagram.svg" alt=""></a>
                     </div>
                 </div>
-               </div>
-            </div>
-        </nav>
-        <div class="header__title">
-            <h1>Полиграфия в Астане</h1>
-            <p>Печать на футболках, толстовках Все виды полиграфических работ</p>
+            </nav>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero__title">
+                    <h1>Полиграфия в Астане</h1>
+                    <p>Печать на футболках, толстовках <br> Все виды полиграфических работ</p>
+                </div>
+            </div>
+        </section>
+        <section class="what-waiting">
+            <div class="container">
+                <h3>Что ждут клиенты от нашей компании ZHARNAMA PRINT:</h3>
+            <div class="what-waiting__content">
+                <div class="what-waiting__image">
+                    <img src="./img/what-waiting-image.png" alt="">
+                </div>
+                <div class="what-waiting__text">
+                    <div class="wwt__check-and-text">
+                        <img src="./img/what-waiting-check-mark.png" alt="">
+                        <p>Чтобы заказ сделали оперативно, качественно и без очередей</p>
+                    </div>
+                    <div class="wwt__check-and-text">
+                        <img src="./img/what-waiting-check-mark.png" alt="">
+                        <p>Понять за что ты платишь</p>
+                    </div>
+                    <div class="wwt__check-and-text">
+                        <img src="./img/what-waiting-check-mark.png" alt="">
+                        <p>Продукцию сделали в срок , а еще чтобы сделали доставку</p>
+                    </div>
+                    <div class="wwt__check-and-text">
+                        <img src="./img/what-waiting-check-mark.png" alt="">
+                        <p>Чтобы можно было сделать в одной полиграфии: от разработки дизайна до полной комплектации продукции</p>
+                    </div>
+                    <div class="wwt__check-and-text">
+                        <img src="./img/what-waiting-check-mark.png" alt="">
+                        <p>Чтобы было идти недалеко , или из дома заказать</p>
+                    </div>
+                    <div class="wwt__check-and-text">
+                        <img src="./img/what-waiting-check-mark.png" alt="">
+                        <p>Чтобы все было современно и модно</p>
+                    </div>
+                    <div class="wwt__check-and-text">
+                        <img src="./img/what-waiting-check-mark.png" alt="">
+                        <p>Помогли с креативом и интересными фишками</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+        <section class="cooperation">
+            <div class="container">
+                <h3>Сотрудничая с нами, Вы получаете:</h3>
+                <div class="cooperation__block">
+                    <div class="cooperation__block--left">
+                        <div class="cb__content">
+                            <span>1</span>
+                            <p>Удобно расположенную по улице Молдагуловой 39 полиграфию, которая работает с 10.00 до 20.00 без выходных.</p>
+                        </div>
+                        <div class="cb__content">
+                            <span>2</span>
+                            <p>Услугу : «онлайн заказ» 
+                                Заказываешь услугу из дома или офиса и получаешь без очереди. 
+                                Мы максимально упростили и ускорили процесс. Во время изготовления продукции всегда на связи с клиентом, фиксируем процесс по ватсаппу. Перед нанесением всегда утверждаем с заказчиком, фактически процесс проходит в режиме онлайн, прозрачно.</p>
+                        </div>
+                        <div class="cb__content">
+                            <span>3</span>
+                            <p>Доставку: если «горит» в течении часа через курьерские службы, при этом делимся ссылкой маршрута курьера, а можно и подождать и при этом продукция хранится у нас.</p>
+                        </div>
+                        <div class="cb__content">
+                            <span>4</span>
+                            <p>Широкий ассортимент полиграфических услуг, предлагаем решения и подскажем как лучше и интереснее сделать.</p>
+                        </div>
+                    </div>
+                    <div class="cooperation__block--right">
+                        <div class="cb__content">
+                            <span>5</span>
+                            <p>Футболки, толстовки, свитшоты, маски и другая продукция очень качественная, ведь мы тщательно подходим к выбору поставщиков и работаем напрямую с производителями 
+                                без посредников.</p>
+                        </div>
+                        <div class="cb__content">
+                            <span>6</span>
+                            <p>Индивидуальную работу с нашими профессиональными дизайнерами, ведь у нас есть молодые талантливые сотрудники, которые работают в офисе, а также удаленные дизайнеры из города Алматы и Петербурга, Москвы.</p>
+                        </div>
+                        <div class="cb__content">
+                            <span>7</span>
+                            <p>Приятное впечатление и хорошее настроение после получения заказа.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
